# medcli

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.docs/: arquitectura.md
.docs/menus/: app.md  medicos.md  pacientes.md  template.md  turnos.md
src/: main.py
src/database/: config.py  connection.py  migration.py  models.py  seeds.py  triggers.py
src/menus/app/: app_menu.py  app_reporte.py  app_services.py  app_vistas.py
src/menus/especialidades/: especialidades_menu.py  especialidades_servicio.py  especialidades_vistas.py
src/menus/medicos/: medicos_menu.py  medicos_servicio.py  medicos_vistas.py
src/menus/obras_sociales/: obras_sociales_menu.py  obras_sociales_servicio.py  obras_sociales_vistas.py
src/menus/pacientes/: pacientes_menu.py  pacientes_servicio.py  pacientes_vistas.py
src/menus/turnos/: turnos_menu.py  turnos_service.py  turnos_vistas.py
src/ui/: input.py  layout.py  mensajes.py
src/utils/: constantes.py  cuil.py  cuit.py  decorators.py  matricula.py
src/utils/ui/: colores.py  input.py  layout.py  mensajes.py  menu.py
