[project]
name = "medcli"
version = "1.0.0"
description = ""
authors = [
    {name = "DiegoIpaez",email = "diegoipaez2000@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "peewee (>=4.0.1,<5.0.0)",
    "tabulate (>=0.10.0,<0.11.0)",
    "reportlab (>=4.4.10,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.4"
pre-commit = "^4.5.1"

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 150
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]